[package]
name = "MouseKeyShare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitignore = "1.0.8"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "mouse_key_share_client"
path = "src/client.rs"

[[bin]]
name = "mouse_key_share_server"
path = "src/server.rs"
